Fix Border and Overflow of parent layout

--- a/root/app/_components/Footer/index.module.scss
+++ b/root/app/_components/Footer/index.module.scss
@@ -74,5 +74,15 @@
         text-decoration: underline;
       }
     }
+
+    & .allRights {
+      display: none;
+    }
+
+    @media only screen and (min-width: 768px) {
+      & .allRights {
+        display: inline;
+      }
+    }
   }
 }
